--- a/package.json
+++ b/package.json
@@ -13,5 +13,13 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/andrianfirmansyahh/Cpluscandco-Coding-Test.git"
+  },
+  "bugs": {
+    "url": "https://github.com/andrianfirmansyahh/Cpluscandco-Coding-Test/issues"
+  },
+  "homepage": "https://github.com/andrianfirmansyahh/Cpluscandco-Coding-Test#readme"
 }
