--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "version": "1.0.0",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+      "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy"
   },
   "author": "",
   "license": "ISC",
+  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/andrianfirmansyahh/Cpluscandco-Coding-Test.git"
